Continued styling, improving mobile responsivity and window resizing behavior.

--- a/ui/index.html
+++ b/ui/index.html
@@ -18,7 +18,7 @@
     <p>
       <a href="javascript:void(0)" 
         onclick="document.getElementById('bot').style.display='block';
-                 document.getElementById('fade').style.display='block'">TALK TO OUR BOT</a>
+                 document.getElementById('fade').style.display='block'">Need Help Fast? Talk to Our Department AI Assistant.</a>
     </p>
   </div>
 
@@ -26,16 +26,20 @@
     <div id="bot" class="bot-window">
       <div id="header" class="bot-header">
         <a href="javascript:void(1)" onclick="document.getElementById('bot').style.display='none';
-          document.getElementById('fade').style.display='none'">X</a>
+          document.getElementById('fade').style.display='none'">x</a>
       </div>
       <div id="dialog-frame">
         <div id="bot-says">
-          <p>Bot:</p>
-          <p>Hi Human</p>
+          <p>Hi, are you looking for info on the police station?</p>
         </div>
         <div id="user-says">
-          <p>User:</p>
-          <p>Oh, cool. You're a bot!</p>
+          <p>Yes, I am</p>
+        </div>
+        <div id="bot-says">
+          <p>Hi, are you looking for info on the police station?</p>
+        </div>
+        <div id="user-says">
+          <p>Yes, I am</p>
         </div>
         <div id="input">
           <div id="typing"></div>
