Added intents and entities to new fodler called API. Deleted UI folder. Added test html page for making convo data persistant on each page.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
   <title>Police Department Site</title>
 </head>
 <body>
+  <nav>
+    <a href="customize-window.html">About</a>
+  </nav>
   <div id="app"></div>
   <script src="dist/build.js"></script>
 </body>
