--- a/customize-window.html
+++ b/customize-window.html
@@ -7,6 +7,9 @@
   <title>Document</title>
 </head>
 <body>
-  
+  <header>About</header>
+  <p>Content!!</p>
+  <div id="app"></div>
+  <script src="dist/build.js"></script>
 </body>
 </html>
