Created new html page to test persistence of chat window.

--- a/customize-window.html
+++ b/customize-window.html
@@ -9,7 +9,9 @@
 <body>
   <header>About</header>
   <p>Content!!</p>
-  <div id="app"></div>
-  <script src="dist/build.js"></script>
+
+  <embed src="dist/build.js">
+      <div id="app"></div>
+  </embed>
 </body>
 </html>
